k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-team-7
  namespace: mlops
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: mlops-team-7
