k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-team-7
  namespace: mlops
  annotations:
    external-dns.alpha.kubernetes.io: enable
spec:
  ingressClassName: nginx
  rules:
  - host: mlops.os.wizeline.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlops-team-7
            port:
              number: 80
